--- a/contact-form/src/components/ForumMain/ForumMain.scss
+++ b/contact-form/src/components/ForumMain/ForumMain.scss
@@ -1,3 +1,6 @@
+body {
+  background-color: #F0FFE8;
+}
 .general-query-conteiner {
     display: flex;
     flex-direction: column;
@@ -96,10 +99,12 @@
     font-size: 16px;
     transition: all 0.3s ease;
     height: 100px;
+    
 }
 .submit-button-conteiner {
   display: flex;
   margin-top: 3%;
+  margin-bottom: 5%;
 }
 .submit-button:hover {
   background-color:#013A2D;
@@ -115,4 +120,29 @@
   transition: all 0.3s ease;
   color: white;
   height: 60px;
+}
+.main-conteiner {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  width: 50%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+    margin-left: 25%;
+    margin-top: 5%;
+}
+
+.form-contact {
+  margin-left: 3%;
+  margin-right: 3%;
+}
+.first-name-header, .last-name-header, .email-header, .general-query-header, .message-header {
+  font-weight: normal;
+}
+.first-header {
+  font-size: 28px;
+}
+.text-star {
+  color: #036b52;
 }
