--- a/contact-form/src/components/ForumMain/ForumMain.scss
+++ b/contact-form/src/components/ForumMain/ForumMain.scss
@@ -1,54 +1,59 @@
-
 body {
-  background-color: #F0FFE8;
+  background-color: #f0ffe8;
 }
 .general-query-conteiner {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .general-query-buttons, .email-input-conteiner, .message-input-conteiner  {
-    display: flex;
-    gap: 15px; 
-  }
-  .name-inputs-conteiner {
-    display: flex;
-    gap: 7px;
-  }
-  .first-input:hover, .last-input:hover, .email-input:hover, .message-input:hover {
-    border-color: #036b52;
-  }
-  .query-button {
-    flex: 1; 
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: white;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all 0.3s ease;
-  }
-  
-  .query-button.active, .consent-button.active {
-    background: #036b52;
-    color: black;
-    border-color: #036b52;
-  }
-  
-  .query-button:hover {
-    background: #f0f0f0;
-  }
-  .consent-button-conteiner {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-top: 3%;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.general-query-buttons,
+.email-input-conteiner,
+.message-input-conteiner {
+  display: flex;
+  gap: 15px;
+}
+.name-inputs-conteiner {
+  display: flex;
+  gap: 7px;
+}
+.first-input:hover,
+.last-input:hover,
+.email-input:hover,
+.message-input:hover {
+  border-color: #036b52;
+}
+.query-button {
+  flex: 1;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: white;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.query-button.active,
+.consent-button.active {
+  background: #036b52;
+  color: black;
+  border-color: #036b52;
+}
+
+.query-button:hover {
+  background: #f0f0f0;
+}
+.consent-button-conteiner {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 3%;
+}
 .consent-text {
   font-size: 17px;
 }
- .consent-button {
+.consent-button {
   width: 15px;
   height: 15px;
   border: 2px solid #ccc;
@@ -58,49 +63,49 @@ body {
   transition: all 0.3s ease;
 }
 .consent-button.unactive {
-    background: white;
-    border-color: #ccc;
-  }
-  .name-main {
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-  }
-  .first-input, .last-input {
-    flex: 1; 
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: white;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all 0.3s ease;
-  }
-  .headers-conteiner {
-    display: flex;
-    gap: 34%;
-  }
-  .email-input {
-    flex: 1; 
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: white;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all 0.3s ease;
-  }
+  background: white;
+  border-color: #ccc;
+}
+.name-main {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+.first-input,
+.last-input {
+  flex: 1;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: white;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+.headers-conteiner {
+  display: flex;
+  gap: 34%;
+}
+.email-input {
+  flex: 1;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: white;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
 .message-input {
-  flex: 1; 
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: white;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all 0.3s ease;
-    height: 100px;
-    
+  flex: 1;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: white;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  height: 100px;
 }
 .submit-button-conteiner {
   display: flex;
@@ -108,10 +113,10 @@ body {
   margin-bottom: 5%;
 }
 .submit-button:hover {
-  background-color:#013A2D;
+  background-color: #013a2d;
 }
 .submit-button {
-  flex: 1; 
+  flex: 1;
   padding: 10px 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -123,22 +128,25 @@ body {
   height: 60px;
 }
 .main-conteiner {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 10px;
   border: 1px solid #ccc;
   width: 50%;
   height: 30%;
   display: flex;
   flex-direction: column;
-    margin-left: 25%;
-    
+  margin-left: 25%;
 }
 
 .form-contact {
   margin-left: 3%;
   margin-right: 3%;
 }
-.first-name-header, .last-name-header, .email-header, .general-query-header, .message-header {
+.first-name-header,
+.last-name-header,
+.email-header,
+.general-query-header,
+.message-header {
   font-weight: normal;
 }
 .first-header {
@@ -161,7 +169,7 @@ body {
 }
 
 .success-message {
-  background-color: #2D4A3D;
+  background-color: #2d4a3d;
   color: white;
   padding: 15px;
   border-radius: 8px;
@@ -173,20 +181,18 @@ body {
   opacity: 0;
 }
 
-.success-message, .message-strong {
+.success-message,
+.message-strong {
   display: block;
   font-size: 18px;
   margin-left: 29.5%;
 }
 
- .message-success-paragraf {
+.message-success-paragraf {
   margin: 2%;
 }
-.error-text {
-  color: red;
-}
 
-@media screen and (max-width:320px) {
+@media screen and (max-width: 320px) {
   .main-conteiner {
     width: 80%;
     height: 50%;
@@ -194,5 +200,67 @@ body {
   .form-contact {
     margin-left: 4%;
     margin-right: 4%;
+  }
+  .name-main {
+    gap: 0px;
+  }
+  .name-inputs-conteiner {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .general-query-buttons {
+    display: flex;
+    flex-direction: column;
+  }
+  .last-input {
+    margin-top: 4%;
+  }
+  .last-input,
+  .first-input,
+  .email-input {
+    padding: 10px 10px;
+  }
+  .last-name-header {
+    margin-top: 35%;
+    position: absolute;
+  }
+  .first-name-header {
+    margin-top: 4%;
+  }
+  .email-header {
+    margin-top: 10%;
+  }
+  .general-query-conteiner {
+    gap: 0px;
+  }
+  .consent-button-conteiner {
+    margin-top: 15%;
+  }
+  .submit-button-conteiner {
+    margin-top: 26%;
+  }
+  .error-text-first-input,
+  .error-text-last-input,
+  .error-text-message,
+  .error-text-consent {
+    position: absolute;
+    color: red;
+  }
+  .error-text-first-input {
+    margin-top: 14%;
+  }
+  .error-text-last-input {
+    margin-top: 45%;
+  }
+  .error-text-email-input {
+    margin-top: 14%;
+  }
+  .error-text-buttons {
+    margin-top: 3%;
+    color: red;
+  }
+  .error-text-message {
+    margin-top: 40%;
   }
 }
